--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raposa - Home</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="icon" href="../assets/favicon.png"> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/index.css">
@@ -16,7 +17,7 @@
     <nav>
         <div class="content">
             <div class="left">
-                <span>raposa</span>
+                <img src="../assets/logo.png" alt="">
             </div>
             <ul class="right">
                 <a class="current" href="./index.html">Home</a>
