--- a/html/about.html
+++ b/html/about.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raposa - Our Menu</title>
+    <title>Raposa - About Us</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="icon" href="../assets/favicon.png"> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/menu.css">
+    <!-- <link rel="stylesheet" href="../css/about.css"> -->
 
 </head>
 
@@ -22,8 +22,8 @@
             </div>
             <ul class="right">
                 <a href="./index.html">Home</a>
-                <a class="current" href="./menu.html">Menu</a>
-                <a href="./about.html">About</a>
+                <a href="./menu.html">Menu</a>
+                <a class="current" href="./about.html">About</a>
                 <a href="./contact.html">Contact</a>
             </ul>
         </div>
@@ -31,9 +31,6 @@
     </nav>
 
     <main>
-        <header>
-            <h1>Menu</h1>
-        </header>
     </main>
 
     <footer>
