Enabled github static hosting.

--- a/html/menu.html
+++ b/html/menu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raposa - Our Menu</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="icon" href="../assets/favicon.png"> 
+    <link rel="icon" href="../assets/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/menu.css">
@@ -33,7 +33,16 @@
     <main>
         <header>
             <h1>Menu</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, quod?</p>
         </header>
+        <section class="menu">
+            <div class="category">
+                <button>Breakfast</button>
+                <button>Lunch / Dinner</button>
+                <button>Drinks</button>
+                <button>Desserts</button>
+            </div>
+        </section>  
     </main>
 
     <footer>
