--- a/html/index.html
+++ b/html/index.html
@@ -107,7 +107,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed earum quis cumque!</p>
                 </div>
             </div>
-            <button>View full menu</button>
+            <button onclick="openMenu()">View full menu</button>
         </section>
     </main>
 
@@ -115,6 +115,11 @@
 
     </footer>
 
+    <script>
+        function openMenu() {
+            location.href = './menu.html'
+        }
+    </script>
 
 </body>
 
