Added location and opening hours.

--- a/html/index.html
+++ b/html/index.html
@@ -109,6 +109,14 @@
             </div>
             <button onclick="openMenu()">View full menu</button>
         </section>
+        <section class="location">
+            <h2>Locations</h2>
+            <h3>Sungei Gedong Camp</h3>
+            <h3>Hendon Camp</h3>
+            <h3>Rocky Hill Camp</h3>
+            <h2>Opening Hours</h2>
+            <h3>All outlets 24/7 except Rocky Hill Camp.</h3>
+        </section>
     </main>
 
     <footer>
