Added about page.

--- a/html/about.html
+++ b/html/about.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="../assets/favicon.png"> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
-    <!-- <link rel="stylesheet" href="../css/about.css"> -->
+    <link rel="stylesheet" href="../css/about.css">
 
 </head>
 
@@ -31,6 +31,10 @@
     </nav>
 
     <main>
+        <header>
+            <h1>About Us</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam repudiandae dolore perspiciatis<br>sequi minus dignissimos eligendi veritatis repellat facere. Ratione doloribus est vitae temporibus numquam?</p>
+        </header>
     </main>
 
     <footer>
