--- a/html/index.html
+++ b/html/index.html
@@ -111,11 +111,14 @@
         </section>
         <section class="location">
             <h2>Locations</h2>
-            <h3>Sungei Gedong Camp</h3>
-            <h3>Hendon Camp</h3>
-            <h3>Rocky Hill Camp</h3>
+            <h3>Jewel Changi Airport</h3>
+            <p>78 Airport Blvd, #01, K206, Singapore 819666</p>
+            <h3>Ngee Ann City</h3>
+            <p>391 Orchard Rd, Singapore 238872</p>
+            <h3>Woodlands Square</h3>
+            <p>360 Woodlands Ave 5, Block 360, Singapore 730360</p>
             <h2>Opening Hours</h2>
-            <h3>All outlets 24/7 except Rocky Hill Camp.</h3>
+            <h3>Monday - Friday 9am - 10pm. Closed on Fridays.</h3>
         </section>
     </main>
 
