--- a/html/menu.html
+++ b/html/menu.html
@@ -42,9 +42,61 @@
                 <button onclick="selectCategory(2)" class="menu-button">Drinks</button>
                 <button onclick="selectCategory(3)" class="menu-button">Desserts</button>
             </div>
-            <div class="menu-content">test 1</div>
-            <div class="menu-content">
+            <div class="menu-content"><div class="item">
+                <div class="title">
+                    <h3>Spanish Paella</h3>
+                    <h4>$12.45</h4>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, cum aut.</p>
+            </div>
 
+            <div class="item">
+                <div class="title">
+                    <h3>Spanish Paella</h3>
+                    <h4>$12.45</h4>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, cum aut.</p>
+            </div>
+
+            <div class="item">
+                <div class="title">
+                    <h3>Spanish Paella</h3>
+                    <h4>$12.45</h4>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, cum aut.</p>
+            </div>
+
+            <div class="item">
+                <div class="title">
+                    <h3>Spanish Paella</h3>
+                    <h4>$12.45</h4>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, cum aut.</p>
+            </div></div>
+            <div class="menu-content">
+                <div class="item">
+                    <div class="title">
+                        <h3>Spanish Paella</h3>
+                        <h4>$12.45</h4>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, cum aut.</p>
+                </div>
+
+                <div class="item">
+                    <div class="title">
+                        <h3>Spanish Paella</h3>
+                        <h4>$12.45</h4>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, cum aut.</p>
+                </div>
+
+                <div class="item">
+                    <div class="title">
+                        <h3>Spanish Paella</h3>
+                        <h4>$12.45</h4>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, cum aut.</p>
+                </div>
                 <div class="item">
                     <div class="title">
                         <h3>Spanish Paella</h3>
