Added about info.

--- a/html/about.html
+++ b/html/about.html
@@ -35,6 +35,14 @@
             <h1>About Us</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam repudiandae dolore perspiciatis<br>sequi minus dignissimos eligendi veritatis repellat facere. Ratione doloribus est vitae temporibus numquam?</p>
         </header>
+        <section class="who">
+            <img src="https://static.zerochan.net/Free%21.full.1822375.jpg" alt="">
+            <h2>Our chef is this dood named Haru. He can only cook mackerel stuffs i think.</h2>
+        </section>
+        <section class="who">
+            <img src="https://i.ytimg.com/vi/M4mUOXwuOcg/maxresdefault.jpg" alt="">
+            <h2>Two of our amazing chefs cookin up some fresh pizzas.</h2>
+        </section>
     </main>
 
     <footer>
