--- a/html/about.html
+++ b/html/about.html
@@ -35,6 +35,9 @@
             <h1>About Us</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam repudiandae dolore perspiciatis<br>sequi minus dignissimos eligendi veritatis repellat facere. Ratione doloribus est vitae temporibus numquam?</p>
         </header>
+        <section class="title">
+            <h2>Our team</h2>
+        </section>
         <section class="who">
             <img src="https://static.zerochan.net/Free%21.full.1822375.jpg" alt="">
             <h2>Our chef is this dood named Haru. He can only cook mackerel stuffs i think.</h2>
