--- a/html/index.html
+++ b/html/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raposa - Home</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="icon" href="../assets/favicon.png"> 
+    <link rel="icon" href="../assets/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/navigation.js"></script>
 </head>
 
 <body>
@@ -18,6 +19,11 @@
         <div class="content">
             <div class="left">
                 <img src="../assets/logo.png" alt="">
+                <div class="hamburger" onclick="toggleHamburger()">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
             <ul class="right">
                 <a class="current" href="./index.html">Home</a>
@@ -44,13 +50,13 @@
                     quibusdam natus repellat, quis libero labore!</p>
             </div>
             <div class="right">
-                <img src="https://images.unsplash.com/photo-1519624213695-6819a985fb0b?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80"
+                <img src="../assets/images/image01.jpeg"
                     alt="">
             </div>
         </section>
         <section class="infobox">
             <div class="left"> <img
-                    src="https://images.unsplash.com/photo-1573460759824-d66f62bf2be9?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1489&q=80"
+                    src="../assets/images/image02.jpeg"
                     alt="">
 
             </div>
@@ -118,7 +124,7 @@
             <h3>Woodlands Square</h3>
             <p>360 Woodlands Ave 5, Block 360, Singapore 730360</p>
             <h2>Opening Hours</h2>
-            <h3>Monday - Friday 9am - 10pm. Closed on Fridays.</h3>
+            <h3>Monday - Thursday 9am - 10pm.<br>Saturday - Sunday 9am - 8pm.<br>Closed on Fridays.</h3>
         </section>
     </main>
 
@@ -130,7 +136,7 @@
         function openMenu() {
             location.href = './menu.html'
         }
-    </script>
+    </script> 
 
 </body>
 
