--- a/html/menu.html
+++ b/html/menu.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/menu.css">
-
+    <script src="../js/navigation.js"></script>
 </head>
 
 <body>
@@ -19,6 +19,11 @@
         <div class="content">
             <div class="left">
                 <img src="../assets/logo.png" alt="">
+                <div class="hamburger" onclick="toggleHamburger()">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
             <ul class="right">
                 <a href="./index.html">Home</a>
